namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-community-payback-preprod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-community-payback-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps_community_payback_dev"
    cloud-platform.justice.gov.uk/slack-alert-channel: "hmpps_community_payback_alerts_nonprod"
    cloud-platform.justice.gov.uk/application: "Community Payback"
    cloud-platform.justice.gov.uk/owner: "Community Payback: community-payback-digital-team@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: >- 
      https://github.com/ministryofjustice/hmpps-community-payback-api,
      https://github.com/ministryofjustice/hmpps-community-payback-ui,
      https://github.com/ministryofjustice/hmpps-community-payback-supervisors-ui
    cloud-platform.justice.gov.uk/team-name: "hmpps-community-payback-live"
